Fix contrast issue.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -286,7 +286,12 @@ main {
 	text-align: center;
     border-radius: var(--radius);
 }
-.menu * {
+.menu,
+.menu *,
+.menu::before,
+.menu::after,
+.menu *::before,
+.menu *::after {
 	color: var(--ink-000) !important;
 }
 .menu button {
